--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,11 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-dist-electron
-release
 *.local
 
 # Editor directories and files
-.vscode/.debug.env
-.vscode/settings.json
+.vscode/*
+!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
@@ -24,23 +22,3 @@ release
 *.njsproj
 *.sln
 *.sw?
-
-#lockfile
-package-lock.json
-pnpm-lock.yaml
-yarn.lock
-/test-results/
-/playwright-report/
-/playwright/.cache/
-
-# Env variables
-.env
-.env.production
-.env.development
-.env.test
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-mise.toml
